2005-02-10  Todd Berman  <tberman@off.net>

	* Commands/FileCommands.cs:
	* Services/Project/DefaultProjectService.cs:
	* Services/IconService.cs:
	* Gui/Dialogs/NewProjectDialog.cs:
	* Makefile.am:
	* Internal/Project/PrjxFileFormat.cs:
	* Internal/Project/MdsFileFormat.cs:
	* Internal/Project/Project/Project.cs:
	* Internal/Project/CmbxFileFormat.cs:
	* Internal/Project/Combine/Combine.cs:
	* Internal/Project/MdpFileFormat.cs:
	* Internal/Templates/ProjectTemplates/CombineDescriptor.cs:
	* Internal/Templates/ProjectTemplates/ProjectDescriptor.cs:
	* MonoDevelopCore.addin.xml:
	
	Changes to make the default file extensions .mds and .mdp. Your
	projects will be converted to this fileformat by default.

	Also a lot of misc changes across the codebase to make this work
	properly with other bad code that checks for .CMBX and .PRJX.

2005-02-09  John Luke  <john.luke@gmail.com>

	* Gui/Dialogs/TreeViewOptions.cs
	* Gui/Dialogs/NewFileDialog.cs: dont ref XmlForms

	* Gui/Dialogs/TabbedOptions.cs
	* Gui/Dialogs/InputBox.cs
	* Gui/Dialogs/FusionNative.cs
	* Gui/XmlForms
	* Gui/XmlForms/BaseSharpDevelopForm.cs
	* Gui/XmlForms/SharpDevelopPropertyValueCreator.cs
	* Gui/XmlForms/SharpDevelopObjectCreator.cs
	* Gui/XmlForms/SharpDevelopStringValueFilter.cs
	* Gui/XmlForms/BaseSharpDevelopUserControl.cs
	* Makefile.am: kill some unused stuff

2005-02-02  Lluis Sanchez Gual  <lluis@novell.com>

	* Gui/Dialogs/CombineConfiguration/CombineStartupPanel.cs: 
	Fix nullref exception when saving. 'store' wasn't being set.

2005-02-02  John Luke  <john.luke@gmail.com>

	* Commands/MenuItemBuilders.cs: only use RecentItem.Private
	if it contains something, should fix disappearing labels

2005-02-02  John Luke  <john.luke@gmail.com>

	* Gui/Dialogs/CombineConfiguration/CombineBuildOptions.cs
	* Gui/Dialogs/OptionPanels/ProjectOptions/OutputOptionsPanel.cs
	* Gui/Dialogs/OptionPanels/ProjectOptions/DeployFileOptions.cs
	* Gui/Dialogs/OptionPanels/ExternalToolPanel.cs